--- a/escom-bpm-web/src/main/webapp/view/common/dict-rights.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-rights.xhtml
@@ -60,7 +60,7 @@
                     <p:commandButton icon="ui-icon-trash" title="#{bundle.Delete}" styleClass="without-spaces"
                                      disabled="#{_bean.editedItem.inherits or _bean.isReadOnly()}"
                                      actionListener="#{_bean.onDeleteRight(right)}"
-                                     update="mainFRM:mainTabView:tblRight">
+                                     update="tblRight">
                     </p:commandButton>
                 </p:column>
 
@@ -104,7 +104,7 @@
                         <p:commandButton value="#{bundle.Add}" title="#{bundle.AddRight}"
                                          actionListener="#{_bean.onAddRight()}"
                                          disabled="#{_bean.editedItem.inherits or _bean.isReadOnly()}"
-                                         update="mainFRM:mainTabView:tblRight">
+                                         update="tblRight">
                         </p:commandButton>
                     </h:panelGroup>
                 </f:facet>
